# galaxea-a1-runtime

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Justfile  Motor_Holder_2.stl  README copy.md  README.md  Rotation_Pitch.stl  Under_Arm.stl  docker-compose.a1-noetic.yml  pyproject.toml  sanity_joint.py  test_eef.py  test_joint.py  test_pickle.py  troubleshooting.md
.github/workflows/: check.yml
a1/: constants.py  utils.py
a1/data_collection/: __init__.py  a1_replay_bridge.py  a1_server.py  camera_server.py  data_collector.py
a1/training/: a1_policy.py  config.py  data_loader.py
configs/: collect_data.yaml  drag_replay.yaml  process_data.yaml  train.yaml
configs/datasets/: banana_in_the_plate.toml  fruit_placement.toml  fruit_placement_raw.toml
configs/deployments/: act_joint.toml  lingbot_va.toml
configs/evaluation/: fruit_placement_offline.toml
configs/inference/: a1_act_joint.toml  a1_lingbot_va.toml  act_joint_a1.toml  lingbot_va_a1.toml
configs/poses/: a1_collection_start.toml  a1_initial.toml  a1_so100_collection_start.toml
configs/system/: a1.toml
configs/tasks/: fruit_placement.toml
configs/teleop/: a1_so100.toml
configs/udev/: 99-datacoach-a1.rules  99-galaxea-a1.rules  99-realsense-libusb.rules
datacoach/: constants.py  utils.py
datacoach/data_collection/: __init__.py  a1_replay_bridge.py  a1_server.py  camera_server.py  data_collector.py  receive_lerobot_data.py
datacoach/data_processing/: align_timestamps.py  data_converter.py
datacoach/inference/: ZMQ_policy_server.py
datacoach/training/: a1_policy.py  config.py
discard/: teleop_a1.py
docker/a1-noetic-arm64/: Dockerfile
docker/a1_noetic_arm64/: Dockerfile  entrypoint.sh
docs/: ARCHITECTURE.md  HUGGINGFACE_RAW_DATA.md  LIVE_INFERENCE.md  RUNBOOK.md  SAFETY.md  SETUP_A1_DOCKER.md  SETUP_ENV.md  SETUP_UDEV.md
example/successful_demo/: cam_0_rgb_video.metadata  cam_1_rgb_video.metadata  commanded_states.pkl  states.pkl
galaxea_a1_runtime/: __init__.py  cli.py  config.py  console.py  constants.py  doctor.py  embodied_ops_backend.py  embodied_ops_device.py  filesystem.py  gripper.py  safety.py  safety_report.py  schema.py
galaxea_a1_runtime/apps/: __init__.py  eef_bridge.py  eef_policy_actions.py  eef_policy_cli.py  eef_policy_executor.py  eef_policy_offline.py  eef_policy_review.py  eef_policy_state.py  eef_policy_teacher_forcing.py  policy_camera.py  task_selection.py
galaxea_a1_runtime/collection/: __init__.py  episode_output.py  lerobot_frame.py  quality.py  schema.py
galaxea_a1_runtime/configuration/: __init__.py  base.py  camera_diagnostics.py  (+7 more)
models/: README.md
operator_panel/: README.md  __init__.py  config_store.py  contracts.py  process.py  protocol.py  server.py
tests/: test_a1_relay_core.py  test_galaxea_a1_act_actions.py  test_galaxea_a1_act_config.py  test_galaxea_a1_act_static.py  test_galaxea_a1_atomic_output.py  test_galaxea_a1_boundary_trim.py  test_galaxea_a1_camera_bridge.py  test_galaxea_a1_camera_diagnostics.py  test_galaxea_a1_camera_geometry.py  test_galaxea_a1_camera_reader.py  test_galaxea_a1_camera_web.py  test_galaxea_a1_camera_web_runtime.py  test_galaxea_a1_cli.py  test_galaxea_a1_collection_schema.py  test_galaxea_a1_configuration_base.py  test_galaxea_a1_console.py  test_galaxea_a1_convert_raw.py  test_galaxea_a1_dataset_pipeline.py  test_galaxea_a1_direct_derivation.py  test_galaxea_a1_direct_recording.py  test_galaxea_a1_eef.py  test_galaxea_a1_eef_bridge.py  test_galaxea_a1_eef_ik.py  test_galaxea_a1_eef_policy_cli.py  test_galaxea_a1_eef_policy_executor.py  test_galaxea_a1_embodied_ops_backend.py  test_galaxea_a1_embodied_ops_device.py  test_galaxea_a1_episode_output.py  test_galaxea_a1_filesystem.py  test_galaxea_a1_gripper.py  test_galaxea_a1_gripper_debug.py  test_galaxea_a1_hardware_freshness.py  test_galaxea_a1_health_checks.py  test_galaxea_a1_lerobot_dataset.py  test_galaxea_a1_lerobot_frame.py  test_galaxea_a1_lerobot_recorder.py  test_galaxea_a1_lerobot_robot.py  test_galaxea_a1_lerobot_teleop.py  test_galaxea_a1_lerobot_writer.py  test_galaxea_a1_lingbot_actions.py  (+51 more)
(+323 files in other folders)
