[project]
name = "galaxea-a1-runtime"
version = "0.1.0"
requires-python = ">=3.12,<3.13"

dependencies = [
    "huggingface-hub>=1.0.0,<2.0.0",
    "lerobot[dataset,feetech]",
    "msgpack>=1.1.0,<2.0.0",
    "numpy>=2.2.0",
    "pandas>=2.3.3",
    "pillow>=11.0.0",
    "pyrealsense2>=2.56.5.9235",
    "rospkg>=1.6.0",
    "catkin-pkg>=1.0.0",
    "torch==2.7.1",
    "torchcodec>=0.5.0,<0.6.0; platform_machine == 'x86_64'",
    "torchvision",
    "torchaudio",
    "transformers>=5.4.0,<5.6.0",
    "websockets>=15.0.1",
]

[project.scripts]
galaxea-a1-runtime = "galaxea_a1_runtime.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["galaxea_a1_runtime*"]

[tool.uv]
environments = ["sys_platform == 'linux' and (platform_machine == 'x86_64' or platform_machine == 'aarch64' or platform_machine == 'arm64')"]

[tool.uv.sources]
lerobot = { path = "third_party/lerobot", editable = true }

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "pre-commit>=4.5.1",
    "pynvml>=13.0.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
